--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,144 @@ div {
   padding: .5rem;
   text-align: center;
 }
+
+.btn: hover {
+  background-color: grey;
+  right: 300px;
+  bottom: 540px;
+  display: inline-block;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+
+
+}
+
+.btn {
+  background-color: #333;
+  right: 300px;
+  bottom: 540px;
+  display: inline-block;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  font-size: 1.125rem
+}
+
+.btn-sub {
+  background-color: #ccc;
+  right: 300px;
+  bottom: 540px;
+  display: inline-block;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+.btn-gho {
+  background-color: #fff;
+  border-style: solid;
+  color: #000;
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+.btn-warn {
+  background-color: #f33;
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+.btn-pri-small {
+  background-color: #333;
+  right: 300px;
+  bottom: 540px;
+  display: inline-block;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  font-size: .875rem;
+  font-weight: bold;
+}
+
+.btn-sub-small {
+  background-color: #ccc;
+  right: 300px;
+  bottom: 540px;
+  display: inline-block;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.btn-gho-small {
+  background-color: #fff;
+  border-style: solid;
+  color: #000;
+  padding: .4em .75em .3em;
+  font-weight: bold;
+}
+
+.btn-warn-small {
+  background-color: #f33;
+  padding: .4em .75em .3em;
+  font-weight: bold;
+}
+
+.btn-pri-big {
+  background-color: #333;
+  right: 300px;
+  bottom: 540px;
+  display: inline-block;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.btn-sub-big {
+  background-color: #ccc;
+  right: 300px;
+  bottom: 540px;
+  display: inline-block;
+  padding: .4em .75em .3em;
+  border-radius: 8px;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.btn-gho-big {
+  background-color: #fff;
+  border-style: solid;
+  color: #000;
+  padding: .4em .75em .3em;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.btn-warn-big {
+  background-color: #f33;
+  padding: .4em .75em .3em;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
