--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0;
+}
+
 div {
   padding: .5rem;
   text-align: center;
@@ -31,7 +35,7 @@ div {
   right: 300px;
   bottom: 540px;
   display: inline-block;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   border-radius: 8px;
   color: #fff;
   font-family: "Open Sans", sans-serif;
@@ -44,7 +48,7 @@ div {
   right: 300px;
   bottom: 540px;
   display: inline-block;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   border-radius: 8px;
   color: white;
   font-family: "Open Sans", sans-serif;
@@ -57,6 +61,7 @@ div {
   background-color: #fff;
   border-style: solid;
   color: #000;
+  padding: .5em .75em .4em;
   font-size: 1.125rem;
   font-weight: bold;
 }
@@ -65,6 +70,7 @@ div {
   background-color: #f33;
   font-size: 1.125rem;
   font-weight: bold;
+  padding: .5em .75em .4em;
 }
 
 .btn-pri-small {
@@ -72,7 +78,7 @@ div {
   right: 300px;
   bottom: 540px;
   display: inline-block;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   border-radius: 8px;
   color: #fff;
   font-family: "Open Sans", sans-serif;
@@ -86,7 +92,7 @@ div {
   right: 300px;
   bottom: 540px;
   display: inline-block;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   border-radius: 8px;
   color: white;
   font-family: "Open Sans", sans-serif;
@@ -98,13 +104,13 @@ div {
   background-color: #fff;
   border-style: solid;
   color: #000;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   font-weight: bold;
 }
 
 .btn-warn-small {
   background-color: #f33;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   font-weight: bold;
 }
 
@@ -113,7 +119,7 @@ div {
   right: 300px;
   bottom: 540px;
   display: inline-block;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   border-radius: 8px;
   color: #fff;
   font-family: "Open Sans", sans-serif;
@@ -128,7 +134,7 @@ div {
   right: 300px;
   bottom: 540px;
   display: inline-block;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   border-radius: 8px;
   color: white;
   font-family: "Open Sans", sans-serif;
@@ -141,14 +147,14 @@ div {
   background-color: #fff;
   border-style: solid;
   color: #000;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   font-size: 1.5rem;
   font-weight: bold;
 }
 
 .btn-warn-big {
   background-color: #f33;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   font-size: 1.5rem;
   font-weight: bold;
 }
