--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,6 @@ html {
   box-sizing: inherit;
 }
 
-body {
-  margin: 0;
-}
 
 div {
   padding: .5rem;
@@ -21,7 +18,7 @@ div {
   right: 300px;
   bottom: 540px;
   display: inline-block;
-  padding: .4em .75em .3em;
+  padding: .5em .75em .4em;
   border-radius: 8px;
   color: #fff;
   font-family: "Open Sans", sans-serif;
@@ -39,6 +36,21 @@ div {
   border-radius: 8px;
   color: #fff;
   font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 1.125rem
+}
+
+.btn-pri {
+  background-color: #333;
+  right: 300px;
+  bottom: 540px;
+  display: inline-block;
+  padding: .5em .75em .4em;
+  border-radius: 8px;
+  color: #fff;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
   text-decoration: none;
   font-size: 1.125rem
 }
@@ -63,7 +75,6 @@ div {
   color: #000;
   padding: .5em .75em .4em;
   font-size: 1.125rem;
-  font-weight: bold;
 }
 
 .btn-warn {
@@ -75,15 +86,12 @@ div {
 
 .btn-pri-small {
   background-color: #333;
-  right: 300px;
-  bottom: 540px;
   display: inline-block;
-  padding: .5em .75em .4em;
+  padding: .4em .75em .3em;
   border-radius: 8px;
   color: #fff;
   font-family: "Open Sans", sans-serif;
   text-decoration: none;
-  font-size: .875rem;
   font-weight: bold;
 }
 
@@ -92,7 +100,7 @@ div {
   right: 300px;
   bottom: 540px;
   display: inline-block;
-  padding: .5em .75em .4em;
+  padding: .4em .75em .3em;
   border-radius: 8px;
   color: white;
   font-family: "Open Sans", sans-serif;
@@ -104,13 +112,12 @@ div {
   background-color: #fff;
   border-style: solid;
   color: #000;
-  padding: .5em .75em .4em;
-  font-weight: bold;
+  padding: .4em .75em .3em;
 }
 
 .btn-warn-small {
   background-color: #f33;
-  padding: .5em .75em .4em;
+  padding: .4em .75em .3em;
   font-weight: bold;
 }
 
@@ -149,7 +156,6 @@ div {
   color: #000;
   padding: .5em .75em .4em;
   font-size: 1.5rem;
-  font-weight: bold;
 }
 
 .btn-warn-big {
