--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,6 @@ div {
   padding: .5em .75em .4em;
   border-radius: 8px;
   color: #fff;
-  font-family: "Open Sans", sans-serif;
   text-decoration: none;
 }
 
@@ -30,7 +29,6 @@ div {
   padding: .5em .75em .4em;
   border-radius: 8px;
   color: #fff;
-  font-family: "Open Sans", sans-serif;
   text-decoration: none;
 }
 
@@ -41,7 +39,6 @@ div {
   padding: .5em .75em .4em;
   border-radius: 8px;
   color: #fff;
-  font-family: "Open Sans", sans-serif;
   text-decoration: none;
 }
 
@@ -52,7 +49,6 @@ div {
   padding: .5em .75em .4em;
   border-radius: 8px;
   color: #fff;
-  font-family: "Open Sans", sans-serif;
   text-decoration: none;
 }
 
@@ -63,13 +59,13 @@ div {
   padding: .5em .75em .4em;
   border-radius: 8px;
   color: #fff;
-  font-family: "Open Sans", sans-serif;
   text-decoration: none;
 }
 
 .btn {
   display: inline-block;
-  padding: .5em .75em .4em;
+  padding: .4em .75em .3em;
+  padding-bottom: .6em;
   border-radius: 8px;
   text-decoration: none;
   font-size: 1.125rem;
@@ -85,6 +81,7 @@ div {
 
 .btn-primary {
   background-color: #333;
+  color: #fff;
 }
 
 .btn-subtle {
