--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ div {
   border-radius: 8px;
   color: #fff;
   text-decoration: none;
+  background-color: #666;
 }
 
 .btn-subtle:hover {
@@ -30,6 +31,7 @@ div {
   border-radius: 8px;
   color: #fff;
   text-decoration: none;
+  background-color: #666;
 }
 
 .btn-ghost:hover {
@@ -40,6 +42,7 @@ div {
   border-radius: 8px;
   color: #fff;
   text-decoration: none;
+  background-color: #666;
 }
 
 .btn-warning:hover {
@@ -50,6 +53,7 @@ div {
   border-radius: 8px;
   color: #fff;
   text-decoration: none;
+  background-color: #666;
 }
 
 .btn:hover {
